Fixed bad links

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 .title > h1 {
   font-size: 4em;
   text-align: center;
-  color: #26c6da;
+  color: #4caf50;
   padding-top: 20px;
   padding-bottom: 50px;
 }
